updated visuals, fixed overflow of scrollbar

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     
     font-family: 'Inconsolata', monospace;
     font-size: 16px;
+    overflow-y: scroll;
+
 }
 
 main {
